[package]
name = "cuid2-timeless"
version = "0.1.2"
edition = "2021"
description = "An unstable, barely tested, probably giving wrong output and might panic out of nowhere CUID2 implementation in Rust"
license-file = "LICENSE"
repository = "https://github.com/timelessnesses/cuid2-timeless"
documentation = "https://docs.rs/cuid2-timeless"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.3"
hex = "0.4.3"
num-bigint = "0.4.5"
num-integer = "0.1.46"
rand = { version = "0.8.5", features = ["getrandom"], optional = true}
regex = { version = "1.10.4", optional = true}
sha2 = { version = "0.10.8", optional = true}
sha3 = { version = "0.10.8", optional = true}

[features]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
random = ["dep:rand"]
regex = ["dep:regex"]
tests = ["sha3", "regex", "random"]
default = ["random", "regex", "sha3"]
